CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (yaml-parser)

OPTION (BUILD_SHARED_LIBS "Build shared libraries" OFF)
OPTION (BUILD_TESTING "Build tests" OFF)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (SOURCES
        ${SRC_DIR}/Parser.cpp
        ${SRC_DIR}/LineParser.cpp
    )

SET (HEADERS
        ${INCLUDE_DIR}/Parser.h
        ${INCLUDE_DIR}/LineParser.h
    )

SET (CMAKE_CXX_STANDARD 14)

ADD_SUBDIRECTORY (third_party)

IF (BUILD_SHARED_LIBS)
    MESSAGE ("Build SHARED library")

    ADD_LIBRARY (yaml-parser SHARED ${SOURCES} ${HEADERS})

    IF (WIN32)
        SET_TARGET_PROPERTIES (yaml-parser PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
    ENDIF (WIN32)
ELSE (BUILD_SHARED_LIBS)
    MESSAGE ("Build STATIC library")

    ADD_LIBRARY (yaml-parser STATIC ${SOURCES} ${HEADERS})
ENDIF (BUILD_SHARED_LIBS)

TARGET_INCLUDE_DIRECTORIES (yaml-parser PUBLIC ${INCLUDE_DIR})

IF (BUILD_TESTING)
    INCLUDE (CTest)
    ADD_SUBDIRECTORY (tests)

    ADD_TEST (NAME yaml-parser-tests COMMAND $<TARGET_FILE:yaml-parser-tests>)
ENDIF (BUILD_TESTING)
